--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Me</title>
+		<title>John Paul Oses</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="aboutme.html" class="active">About Me</a></li>
-						<!-- <li><a href="elements.html">Elements</a></li> -->
+						<li><a href="resume.html">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -35,11 +35,13 @@
 							<h1 class="major">About Me</h1>
 							<span class="image fit"><img src="images/jp.jpg" alt="" /></span>
 							<h2>Who am I?</h2>
-							<p>My name is John Paul Oses, but I prefer to go by JP! I am currently a Senior at Purdue University and have been a part of the User Experience Design program here for the past 3 years.  I was in Computer Science for 1 year until switching to User Experience Design.  However, during my time as a designer I have developed a strong set of technical and communication skills, which has allowed me to act as a bridge between design and developement.</p>
+								<p>My name is John Paul Oses, but I prefer to go by JP! I am currently a Senior at Purdue University and have been a part of the User Experience Design program here for the past 3 years.  I was in Computer Science for 1 year until switching to User Experience Design.  However, during my time as a designer I have developed a strong set of technical and communication skills, which has allowed me to act as a bridge between design and developement.</p>
 							<h2>What is my passion?</h2>
-							<p>My passion lies more in visual design and development within the field of UX! I really enjoy being challenged and going into the future I would like to work with more complex design problems and systems and help to not only design concise, modern solutions but develop and implement them as well. </p>
+								<p>My passion lies more in user interface design and development within the field of UX! I really enjoy being challenged and going into the future I would like to work with more complex design problems and systems. In addition, I hope to help not only design concise, modern solutions but develop them as well! </p>
 							<h2>What is your design process like?</h2>
-							<p>I always begin my process with establishing my users and stakeholders.  Once I can identify who is invested in my design, I try to hit ideation as early on as I can.  I am not a fan of your traditional waterfall structure for design because it does not allow room for ideas to grow! Starting ideation early gives your ideas a space for them to flourish in different ways - ways in which are specific to you as a designer! Early ideation also helps to guide areas of potential research.  However, research should be continous throughout your process! Once I have some ideas established, it is time for the iteration process! I like to spend much of my design process sketching and wireframing and receiving continous feedback from users and stakeholders. Continuous feedback is really a key part of my process as it informs much of my design changes and allows me to make constant improvements from one iteration to the next.  This process occurs a final solution is reached, but that is not where I stop my process! I think beyond just design, and move into development as well.  If there is a way I can work with developers to help actually create this solution, you can bet that I will be involved in that process as well! Whatever it takes to make my solution come to life is the route I am going to take, no matter the technical implications.  I am willing to learn what is necessary to see through that my solution is created exactly as I designed it.</p>
+								<p>I always begin my process with establishing my users and stakeholders.  Once I can identify who is invested in my design, I try to hit ideation as early on as I can.  I am not a fan of your traditional waterfall structure for design because it does not allow room for ideas to grow! Starting ideation early gives your ideas a space for them to flourish in different ways - ways in which are specific to you as a designer! Early ideation also helps to guide areas of potential research.  However, research should be continous throughout your process! Once I have some ideas established, it is time for the iteration process! I like to spend much of my design process sketching and wireframing and receiving continous feedback from users and stakeholders. Continuous feedback is really a key part of my process as it informs much of my design changes and allows me to make constant improvements from one iteration to the next.  This process occurs a final solution is reached, but that is not where I stop my process! I think beyond just design, and move into development as well.  If there is a way I can work with developers to help actually create this solution, you can bet that I will be involved in that process as well! Whatever it takes to make my solution come to life is the route I am going to take, no matter the technical implications.  I am willing to learn what is necessary to see through that my solution is created exactly as I designed it.</p>
+							<h2>What are some of your hobbies?</h4>
+								<p>Video games, music and food are my holy trinity.  I play Rocket League competitively with a good amount of Fortnite thrown in the mix as well.  I listen to a lot of hip-hop and have been blessed to see some of my favorite artists live in concert (Kanye West, Red Hot Chili Peppers, Playboi Carti - just to name a few).  Also, I could eat breakfast foods any time of the day, any day of the week.</p>
 						</div>
 					</section>
 
@@ -49,7 +51,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; John Paul Oses</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
