--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">My Projects</a></li>
-							<li><a href="#two">About Me</a></li>
-							<li><a href="#three">Inquiries</a></li>
+							<li><a href="#two">Resume</a></li>
+							<li><a href="#three">About Me</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -81,42 +81,22 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What I do</h2>
-							<p>Throughout my journey as a UX/UI Designer, I have had the opportunity to work on a number of different projects.  My experiences have allowed me to gather an arsenal of skills that make me not only an effective worker, but a versatile designer.</p>
-							<div class="features">
-								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Coding</h3>
-									<p>One of my most treasured skills. I have held a role in my project groups as the technical savant.  I consider myself proficient in HTML/CSS, with experience using JS, Java, Python and C++.  However, this is only the beginning of this list.  I hope future work/projects will make this list grow!</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Wireframing and Prototyping</h3>
-									<p>With a strong passion for creating modern, responsive UI's, I have used many tools to aid in visualizing in my designs.  I am most proficient with Sketch and Figma.  I also have extensive experience using the Adobe Creative Suite in order to create final deliverables.</p>
-								</section>
-								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Project Management</h3>
-									<p>I have worked on multiple projects where I have served as either a Project Lead or a Co-Lead. My experience is mainly in utilizing Lean UX to drive my design process.  However, I also have knowledge of Agile Development methods </p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Collaboration</h3>
-									<p>I am a strong believer that collaborative work creates the finest solutions.  Personally, I love bouncing ideas off peers and getting feedback on my work.  During my time at Purdue, I have worked in many collaborative teams for classes/projects.  Thus, collaboration and small group communication are nothing new to me.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="aboutme.html" class="button">Learn more</a></li>
-							</ul>
+							<h2>Resume</h2>
+							<p>Take a look at my Resume! </p>
+							<span class="image fit"><img src="images/resume.svg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>If anything on my site has perked your interests, feel free to contact me for any further inquiries!</p>
-							<div class="split style1">
+							<h2>About Me</h2>
+							<p>Get to know me a little more!</p>
+							<ul class="actions">
+								<li><a href="aboutme.html" class="button">Learn more</a></li>
+							</ul>
+
+							<!-- <div class="split style1">
 								<section>
 									<form method="post" action="#">
 										<div class="fields">
@@ -157,6 +137,7 @@
 									</ul>
 								</section>
 							</div>
+						-->
 						</div>
 					</section>
 
