--- a/project2.html
+++ b/project2.html
@@ -347,7 +347,7 @@
 							<ul class="actions fit">
 								<li><a href="project1.html" class="button icon fa-angle-double-left">Previous Project</a></li>
 								<li><a href="project2.html" class="button icon fa-angle-double-up">Back to Top</a></li>
-								<li><a href="aboutme.html" class="button icon fa-angle-double-right">About Me</a></li>
+								<li><a href="project3.html" class="button icon fa-angle-double-right">Next Project</a></li>
 							</ul>
 						</div>
 					</section>
