--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
 						<div class="inner">
 							<h2>Resume</h2>
 							<p>Take a look at my Resume! </p>
-							<span class="image fit"><img src="images/resume.svg" alt="" /></span>
+							<ul class="actions">
+								<li><a href="resume.pdf" class="button">View Resume</a></li>
+							</ul>
 						</div>
 					</section>
 
