--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="aboutme.html" class="active">About Me</a></li>
-						<li><a href="resume.html">Resume</a></li>
+						<li><a href="resume.pdf">Resume</a></li>
 					</ul>
 				</nav>
 			</header>
